# infinite-canvas-studio

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
docs/: BASELINE_INVENTORY.md  PRD.md  (+4 more)
services/backend/: entrypoint.py  pyproject.toml
services/backend/src/infinite_canvas_studio/: __init__.py  app.py  main.py
services/backend/src/infinite_canvas_studio/api/: __init__.py  canvases.py  events.py  health.py  projects.py
services/backend/src/infinite_canvas_studio/core/: __init__.py  exceptions.py  library.py
services/backend/src/infinite_canvas_studio/infrastructure/: __init__.py
services/backend/src/infinite_canvas_studio/infrastructure/database/: __init__.py  models.py  runtime.py
services/backend/src/infinite_canvas_studio/infrastructure/ffmpeg/: __init__.py
services/backend/src/infinite_canvas_studio/infrastructure/storage/: __init__.py
services/backend/src/infinite_canvas_studio/modules/: __init__.py
services/backend/src/infinite_canvas_studio/modules/assets/: __init__.py
services/backend/src/infinite_canvas_studio/modules/backup/: __init__.py
services/backend/src/infinite_canvas_studio/modules/canvases/: __init__.py  service.py
services/backend/src/infinite_canvas_studio/modules/history/: __init__.py
services/backend/src/infinite_canvas_studio/modules/integrations/: __init__.py
services/backend/tests/: test_canvases.py  test_errors_and_events.py  test_health.py  test_projects.py
(+51 files in other folders)
