[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "infinite-canvas-studio-backend"
version = "0.0.0"
description = "Local business sidecar for Infinite Canvas Studio"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.15,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pillow>=11,<13",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.12,<7",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/infinite_canvas_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
